Fixed style.css. Text no longer overlaps.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,7 +18,7 @@ nav {
 
 header{
     background-color: #eadcff;
-    height: calc(100vh - 70px);
+    min-height: calc(100vh - 70px);
     padding: 24px;
     display: flex;
     align-items: center;
@@ -64,8 +64,8 @@ li {
 
 .row {
     width: 100%;
-    max-width: 1300 px;
-    margin: auto;
+    max-width: 1300px;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,6 +84,9 @@ ABOUT
 #contact,
 footer {
     padding: 48px 0;
+}
+
+#about {
     background-color: #f8ffdc;
 }
 
